Bug 419566 - Folder thumbnail previews exceed their region if aspect ratio is extreme
Summary: Folder thumbnail previews exceed their region if aspect ratio is extreme
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: Thumbnails and previews (other bugs)
Version First Reported In: 19.12
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-03 01:58 UTC by Brennan Kinney
Modified: 2020-05-30 04:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08
Sentry Crash Report:


Attachments
Info Panel showing the preview breaking out of it's expected bounds (8.77 KB, image/png)
2020-04-03 01:58 UTC, Brennan Kinney
Details
Details View icon showing slightly different positioning of bugged preview (3.58 KB, image/png)
2020-04-03 02:00 UTC, Brennan Kinney
Details
The problematic image, 16x1024 width/height (467 bytes, image/png)
2020-04-03 02:01 UTC, Brennan Kinney
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Brennan Kinney 2020-04-03 01:58:38 UTC
Created attachment 127226 [details]
Info Panel showing the preview breaking out of it's expected bounds

SUMMARY
For tall/wide images, where the aspect ratio is large, the thumbnail preview appears to exceed the intended region for display.

This only affects the preview thumbnail on a thumbnail, individual icon previews per file seem to be fine.

STEPS TO REPRODUCE
1. Have a folder with some images, with at least one very wide or tall image.
2. Look at the generated preview for the folder icon in details view or info panel.

OBSERVED RESULT
Preview breaks out of it's region/quarter on the folder preview.

EXPECTED RESULT
Either don't display it, scale it down to fit it's region, or fade/crop to fit. Scaling it may serve no value preview wise, other than avoiding the rendered bug.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro KDE
KDE Plasma Version: 5.18.3
KDE Frameworks Version: 5.68.0
Qt Version: 5.14.1

ADDITIONAL INFORMATION
Possible duplicate of this 2008 bug report that has seen no activity since 2011:
https://bugs.kde.org/show_bug.cgi?id=160520
Comment 1 Brennan Kinney 2020-04-03 02:00:01 UTC
Created attachment 127227 [details]
Details View icon showing slightly different positioning of bugged preview
Comment 2 Brennan Kinney 2020-04-03 02:01:33 UTC
Created attachment 127228 [details]
The problematic image, 16x1024 width/height
Comment 3 Kai Uwe Broulik 2020-04-08 07:21:12 UTC
Re-assigning to kio-extras where the thumbnailer lives
Comment 4 Nate Graham 2020-04-15 03:06:31 UTC
Fascinating.
Comment 5 Méven Car 2020-05-30 04:27:25 UTC
Git commit 6be61a4b847f4da3f27d9cf7cb31117e83481cb4 by Méven Car.
Committed on 29/05/2020 at 08:19.
Pushed by meven into branch 'master'.

Thumbnail folders: scale down sub image when their height is too big
FIXED-IN: 20.08

M  +2    -0    thumbnail/thumbnail.cpp

https://invent.kde.org/network/kio-extras/commit/6be61a4b847f4da3f27d9cf7cb31117e83481cb4