Thumbnail folders: scale down sub image when their height is too big

BUG: 419566
FIXED-IN: 20.08